<resources>
    <string name="slide3">Truyền dữ liệu giữa 2 intent</string>
    <string name="slide5">Implicit Intents</string>
    <string name="slide6">Fragement</string>
    <string name="slide8">Drawable</string>
    <string name="slide9_1">Menu</string>
    <string name="slide9_2">Alert, Date</string>
    <string name="slide10">User Navigation</string>
    <string name="textr_required_message">Vui lòng nhập Message</string>
    <string name="enter_message">Enter your Message here</string>
    <string name="enter_reply">Enter your Reply here</string>
    <string name="button_reply">Reply</string>
    <string name="button_send">Send</string>
    <string name="text_display_reply">This is the reply</string>
    <string name="text_display_message_received">This is the message</string>
    <string name="text_title_received">Message received</string>
    <string name="text_title_reply">Reply received</string>
    <string name="minus_button">Minus Button</string>
    <string name="plus_button">Plus Button</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="initial_count">0</string>
    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>
    <string name="intent_exception">Không thể thực hiện intent này</string>
    <string name="defaul_search_web_value">http://developer.android.com</string>
    <string name="defaul_search_location_value">Golden Bridge</string>
    <string name="button_search_web">OPEN WEBSITE</string>
    <string name="button_search_location">OPEN LOCATION</string>
    <string name="button_share_message">SHARE THIS TEXT</string>
    <string name="defaul_share_message_value">Twas brillig and the slithy toves</string>
    <string name="text_required_message">Không được để trống ô này</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="yes_message">ARTICLE: Like</string>
    <string name="no_message">ARTICLE: Thanks</string>
    <string name="question_article">LIKE THE ARTICLE?</string>
    <string name="article_title">Cry for a Shadow</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="content_article">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</string>
    <string name="droid_cafe">Droid Cafe</string>
    <string name="order_donut">You ordered a donut</string>
    <string name="order_ice_cream_sanwich">You ordered an ice cream sanwich</string>
    <string name="order_yogurt">You ordered a yogurt</string>
    <string name="name_order">Name</string>
    <string name="address_order">Address</string>
    <string name="phone_order">Phone</string>
    <string name="note_order">Note</string>
    <string name="choose_delivery_method">Choose a delivery method</string>
    <string name="same_day_message_service">Same day message service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="item_order">order</string>
    <string name="alert">Alert</string>
    <string name="date">Date</string>
    <string name="alert_click_message">Click OK to continue, or Cancel to stop:</string>
    <string name="ok_message">OK</string>
    <string name="cancel_message">Cancel</string>
    <string name="press_ok">Press OK</string>
    <string name="press_cancel">Press Cancel</string>
    <string name="top_stories">These are the top stories:</string>
    <string name="tech_news">Tech news you can use</string>
    <string name="cooking_tips">Cooking tips</string>
    <string name="stories">Stories</string>
    <string name="tech">Tech</string>
    <string name="cooking">Cooking</string>
    <string name="click">Click</string>
    <string name="send_custom_broadcast">Send Custom Broadcast</string>
    <string name="unknow_intent_action">unknown intent action</string>
    <string name="power_connected">Power connected!</string>
    <string name="power_disconnected">Power disconnected!</string>
    <string name="custom_broadcast_received">Custom Broadcast Received</string>
    <string name="action_custom_broadcast">.ACTION_CUSTOM_BROADCAST</string>
    <string name="word">Word</string>
    <string name="napping">Napping</string>
    <string name="start_task">Start Task</string>
    <string name="current_text">Current text</string>
    <string name="title_book_api">Enter a book name, or part of a book name, or just some text from a book to find the full book title and who wrote the book!</string>
    <string name="enter_book_title">Enter a Book title</string>
    <string name="button_search_book">Search books</string>
    <string name="no_result">No result</string>
    <string name="loading">Loading ...</string>
    <string name="no_network">No network</string>
    <string name="items">items</string>
    <string name="volumeInfo">volumeInfo</string>
    <string name="title">title</string>
    <string name="authors">authors</string>
    <string name="query">query</string>
    <string name="black">BLACK</string>
    <string name="red">RED</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>
    <string name="count">COUNT</string>
    <string name="reset">RESET</string>
    <string name="notify_me">Notify me!</string>
    <string name="update_me">Update me!</string>
    <string name="cancel_me">Cancel me!</string>
</resources>
