<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ex_slide17.SharedPreferencesActivity">

    <TextView
        android:id="@+id/text_view_show_count"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_400"
        android:background="@color/grey"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_150"
        android:text="@string/initial_count"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_112" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_30"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_black_color"
            style="@style/AppTheme.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/black" />

        <Button
            android:id="@+id/button_red_color"
            style="@style/AppTheme.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:text="@string/red" />

        <Button
            android:id="@+id/button_blue_color"
            style="@style/AppTheme.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:text="@string/blue" />

        <Button
            android:id="@+id/button_green_color"
            style="@style/AppTheme.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:text="@string/green" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_30"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:onClick="count"
            android:text="@string/count" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:onClick="reset"
            android:text="@string/reset" />
    </LinearLayout>
</LinearLayout>


