<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ex_slide9.DroidCafeOrder">

    <TextView
        android:id="@+id/text_view_ordered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_up"
        android:textSize="@dimen/sp_30" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:text="@string/name_order"
            android:textSize="@dimen/sp_20" />

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:text="@string/address_order"
            android:textSize="@dimen/sp_20" />

        <EditText
            android:id="@+id/edit_text_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:text="@string/phone_order"
            android:textSize="@dimen/sp_20" />

        <EditText
            android:id="@+id/edit_text_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:text="@string/note_order"
            android:textSize="@dimen/sp_20" />

        <EditText
            android:id="@+id/edit_text_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_delivery_method"
        android:textSize="@dimen/sp_30" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_20">

        <RadioButton
            android:id="@+id/radio_button_same_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_8"
            android:text="@string/same_day_message_service" />

        <RadioButton
            android:id="@+id/radio_button_next_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_8"
            android:text="@string/next_day_ground_delivery" />

        <RadioButton
            android:id="@+id/radio_button_pick_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_8"
            android:text="@string/pick_up" />
    </RadioGroup>
</LinearLayout>
