<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ex_slide3.ActivityReplyMessage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_10">

        <TextView
            android:id="@+id/text_view_title_reply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_title_received"
            android:textSize="@dimen/sp_30" />

        <TextView
            android:id="@+id/text_view_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/text_display_message_received"

            android:textSize="@dimen/sp_20" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_reply"
        android:layout_width="@dimen/dp_300"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:hint="@string/enter_reply" />

    <Button
        android:id="@+id/button_reply"
        android:layout_width="@dimen/dp_100"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/dp_280"
        android:backgroundTint="@color/grey"
        android:text="@string/button_reply" />
</RelativeLayout>

