<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySendMessage">
    <LinearLayout
        android:paddingLeft="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_30"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_title_reply"
            android:visibility="invisible"
            android:textSize="@dimen/sp_30"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_20"
            android:textSize="@dimen/sp_20"
            android:visibility="invisible"
            android:id="@+id/text_view_reply"
            android:text="@string/text_display_reply"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <EditText
        android:layout_width="@dimen/dp_280"
        android:layout_height="wrap_content"
        android:hint="@string/enter_message"
        android:id="@+id/edit_text_send"
        android:layout_alignParentBottom="true"/>
    <Button
        android:id="@+id/button_send"
        android:layout_width="@dimen/dp_120"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/dp_280"
        android:backgroundTint="@color/grey"
        android:text="@string/button_send"/>

</RelativeLayout>

