<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ex_slide13.BookApiActivity">

    <TextView
        android:id="@+id/text_view_title_book_api"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_book_api"
        android:textSize="@dimen/sp_20" />

    <EditText
        android:id="@+id/edit_text_enter_book_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_book_title" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="searchBook"
        android:text="@string/button_search_book" />

    <TextView
        android:id="@+id/text_view_book_name_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_view_book_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
